Anadir mandatos de import

--- a/0_convertir_xls_ascii_csv.ipynb
+++ b/0_convertir_xls_ascii_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +75,6 @@
    ],
    "source": [
     "# Convertir todos los caracters a ascii -- e.g. \"ñ\" a \"n\".\n",
-    "import unidecode\n",
     "contenidos = open(CSV_PATH).read()\n",
     "ejemplo = unicode(contenidos[:20], encoding='utf-8')\n",
     "print ejemplo, '-->', unidecode.unidecode(ejemplo)\n",
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -734,7 +745,7 @@
        "0708IrundyMirungaHerrerito 68945,95238095238         NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
