--- a/1_limpiar.ipynb
+++ b/1_limpiar.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -67,8 +81,6 @@
     "    if pd.isnull(num):\n",
     "        return np.nan\n",
     "    return 2000 + int(num % 100)\n",
-    "#     return datetime.date(2000 + int(num % 100), 1, 1)\n",
-    "#     return '%d-%d' % (2000 + int(num / 100), 2000 + int(num % 100))\n",
     "\n",
     "df['Campana'] = df['Campana'].apply(convertir_campana)\n",
     "guardar()"
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -194,11 +206,6 @@
    "source": [
     "# Algunos porcentajes fueron entrados commo decimal,\n",
     "# por ejemplo 0.20 en ves de 20 para 20%\n",
-    "# ******************************************************\n",
-    "# ******************************************************\n",
-    "# ********** BUEN EJEMPLO ******************************\n",
-    "# ******************************************************\n",
-    "# ******************************************************\n",
     "df['factor_rend_pcthcosecha'] = df['factor_rend_pcthcosecha'].apply(\n",
     "    lambda pct: pct * 100 if pct < 1 else pct)\n",
     "guardar()"
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -218,18 +225,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARROZ1           6\n",
+      "ARROZ2          19\n",
+      "ARROZ3          16\n",
+      "Arroz1          58\n",
+      "Arroz2          28\n",
+      "Arroz3          12\n",
+      "Arroz4o+        18\n",
+      "Campo tural     39\n",
+      "Desc1          114\n",
+      "Desc2           29\n",
+      "Desc3           14\n",
+      "Desc4o+          2\n",
+      "Maiz             2\n",
+      "RGA             32\n",
+      "Soja            34\n",
+      "dtype: int64\n",
+      "\n",
+      "arroz1          64\n",
+      "arroz2          47\n",
+      "arroz3          28\n",
+      "arroz4o+        18\n",
+      "campo tural     39\n",
+      "desc1          114\n",
+      "desc2           29\n",
+      "desc3           14\n",
+      "desc4o+          2\n",
+      "maiz             2\n",
+      "rga             32\n",
+      "soja            34\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# ******************************************************\n",
-    "# ******************************************************\n",
-    "# ********** BUEN EJEMPLO ******************************\n",
-    "# ******************************************************\n",
-    "# ******************************************************\n",
-    "# print df['cultivo_antecesor'].value_counts().sort_index()\n",
+    "print df['cultivo_antecesor'].value_counts().sort_index()\n",
     "\n",
     "# Correjir duplicadas de string que resultan del may/minisculas\n",
     "def lower(s):\n",
@@ -241,14 +280,14 @@
     "    if dtype == 'O':\n",
     "        df[col] = df[col].apply(lower)\n",
     "\n",
-    "# print\n",
-    "# print df['cultivo_antecesor'].value_counts().sort_index()\n",
+    "print\n",
+    "print df['cultivo_antecesor'].value_counts().sort_index()\n",
     "guardar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -293,39 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "media 150-250        38\n",
-       "media : 250 a 350    25\n",
-       "baja : - 250         18\n",
-       "100-154               1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "values = []\n",
-    "for v in df['factor_rend_densidad_pl_m2'].values:\n",
-    "    if isinstance(v, str):\n",
-    "        if not v.isalnum():\n",
-    "            values.append(v)\n",
-    "\n",
-    "pd.Series(values).value_counts()"
+    "#"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -350,103 +368,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df['dias_siembra_cosecha'] = (df['fenologia_cosecha_fecha'] - df['fenologia_siembra_fecha']).apply(\n",
-    "    lambda dt: dt / np.timedelta64(24, 'h'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Crear variables del clima"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ESOL</th>\n",
-       "      <th>RAIN</th>\n",
-       "      <th>RHUM</th>\n",
-       "      <th>TMAX</th>\n",
-       "      <th>TMIN</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2006-01-01</th>\n",
-       "      <td>22.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006-01-02</th>\n",
-       "      <td>24.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>76</td>\n",
-       "      <td>37.2</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006-01-03</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>63</td>\n",
-       "      <td>34.2</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            ESOL  RAIN  RHUM  TMAX  TMIN\n",
-       "Date                                    \n",
-       "2006-01-01  22.4     0    60  29.5    19\n",
-       "2006-01-02  24.3     0    76  37.2    21\n",
-       "2006-01-03  20.0     0    63  34.2    17"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1130f0610>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": [
+       "iVBORw0KGgoAAAANSUhEUgAAAicAAAFzCAYAAADlp6mhAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
+       "AAALEgAACxIB0t1+/AAAF4RJREFUeJzt3XuMpXV5wPHv7C6Di4zomqnAAJqu5IldMG4MsRp7IbGA\n",
+       "LSaUShYL0ogaRIWISuMfVKJIaxDWNg1htwjYy+piBMGNrdVoSmirYhDXVeMTWXVv2HV1ZWHDyOIw\n",
+       "/eM90x7GuV+Y57zz/SSEPdf5PfmxZ768550zfaOjo0iSJFWxYqkXIEmS1M04kSRJpRgnkiSpFONE\n",
+       "kiSVYpxIkqRSjBNJklTKqunuEBHvBt4BjAI7gbcDB4GNwFmd57gxMzd37n8qcDuwBjgMXJKZuSir\n",
+       "lyRJrTPlkZOIeCXwPuDVmXk68EPgOuAy4KXAOuAM4D0RcUbnYVuAmzNzHXAtcNcirV2SJLVQ33Qf\n",
+       "whYRKzNzJCKeA9wB/IgmSDZn5l2d+1xLc6TkBuD7mXlc1+N/DJyfmQ8t0gySJKlFpj3npBMm5wF7\n",
+       "gNfSBMrJnctj9gIndf55ZNxT7AWGFmS1kiSp9WZ0Qmxm3pOZg8CHgC9N8Lg+YGSK5xuZ8wolSdKy\n",
+       "MuUJsRGxFjghM/+zc9UdwCbgPuDErrsO0RxJ2Q0cP+5phmiOnkxqdHR0tK+vbxbLliRJhc3rm/p0\n",
+       "P61zIvCpiHhFZv4CuAjYAXwOuDQitgEDwAbgsszcFxE7I2JDZt4ZEWcDI5m5Y8oJ+vo4cODx+cxR\n",
+       "2uDggPP1sDbP1+bZwPl6nfP1rsHBgXk9fso4ycz7I+J64D8i4tfAPuA8miMha4HtQD+wKTPv7zzs\n",
+       "QuDWiLgGGAYumNcKJUnSsjLt55xk5iaat3LGu2qS+z8MnDnPdUmSpGXKT4iVJEmlGCeSJKkU40SS\n",
+       "JJVinEiSpFKME0mSVIpxIkmSSjFOJElSKcaJJEkqxTiRJEmlGCeSJKkU40SSJJVinEiSpFKME0mS\n",
+       "VIpxIkmSSjFOJElSKcaJJEkqxTiRJEmlGCeSJKmUVUu9gPn423+6k3//0aNLvYxpHXXUCp566mkA\n",
+       "/uDkY/nAWy9a4hVJklRXT8fJwSdHePA5sdTLmJmVzb9efmTv0q5DkqTifFtHkiSVYpxIkqRSjBNJ\n",
+       "klSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJ\n",
+       "UinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJ\n",
+       "pRgnkiSpFONEkiSVYpxIkqRSjBNJklTKqunuEBEXA+8HRoEngCsz88GIOADs7brrDZn56Yg4Fbgd\n",
+       "WAMcBi7JzFz4pUuSpDaaMk4iIoAbgPWZuT8iXg/cHRF/BBzMzPUTPGwLsDEzt0bEOcBdwGkLvXBJ\n",
+       "ktRO0x05+RXw1szc37n8IHA88IfASER8FXgh8FngeuAEIDJzK0BmfjEibomI9Zn50GIMIEmS2mXK\n",
+       "OMnMXcAugIjoAzYC9wJPA18CrgaOAb4APAZ8A3hk3NPsBYYA40SSJE1r2nNOACLiucAnaSLjnMx8\n",
+       "rOvmQxGxEbgSeGCSpxiZzyIlSdLyMZMTYk8BtgHfA87MzCcj4s3AtzNzR+duK4AjwG6at326DfHM\n",
+       "E2cnNDg4MJt1A3DM6v5ZP2aprV7dP6dZq2vjTN3aPF+bZwPn63XOtzxNd0LsGuA+4PbMvK7rpnXA\n",
+       "+RHxZ8DRwLuAf8nMfRGxMyI2ZOadEXE2MNIVMZM6cODxWS/+ieEjs37MUhsePjKnWSsbHBxo3Uzd\n",
+       "2jxfm2cD5+t1zte75htd0x05uRw4iSZEzu9cNwqcC3wE2AEcBXwmM2/r3H4hcGtEXAMMAxfMa4WS\n",
+       "JGlZme6E2OtpfgpnIpdO8piHgTPnuS5JkrRM+QmxkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkox\n",
+       "TiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4\n",
+       "kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONE\n",
+       "kiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJ\n",
+       "klSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJ\n",
+       "UinGiSRJKmXVdHeIiIuB9wOjwBPAlcBDwMeBszrPcWNmbu7c/1TgdmANcBi4JDNzUVYvSZJaZ8oj\n",
+       "JxERwA3A2Zm5HvgIcDdwGfBSYB1wBvCeiDij87AtwM2ZuQ64FrhrkdYuSZJaaLq3dX4FvDUz93cu\n",
+       "PwgcD1wA3J6ZT2fmo8BW4OKIGAIiM7cCZOYXgedGxPrFWb4kSWqbKd/WycxdwC6AiOgDNgKfB04D\n",
+       "9nTddS/wcuAk4JFxT7MXGKJ5K0iSJGlKMzohNiKeC3wG+G3gbRM8rg8YmeL5Rua6QEmStLzM5ITY\n",
+       "U4BtwPeAMzPzyYjYDZzYdbchmiMpu2ne9mHcbXun+zqDgwMzXfP/OWZ1/6wfs9RWr+6f06zVtXGm\n",
+       "bm2er82zgfP1OudbnqaMk4hYA9xHc37JdV033QtcGhHbgAFgA3BZZu6LiJ0RsSEz74yIs4GRzNwx\n",
+       "3UIOHHh81ot/YvjIrB+z1IaHj8xp1soGBwdaN1O3Ns/X5tnA+Xqd8/Wu+UbXdEdOLqc5j+T8iDi/\n",
+       "c90ocA6wFtgO9AObMvP+zu0XArdGxDXAMM3Js5IkSTMy3Qmx1wPXT3LzVZM85mHgzHmuS5IkLVN+\n",
+       "QqwkSSrFOJEkSaUYJ5IkqRTjRJIklWKcSJKkUowTSZJUinEiSZJKMU4kSVIpxokkSSrFOJEkSaUY\n",
+       "J5IkqRTjRJIklWKcSJKkUowTSZJUinEiSZJKMU4kSVIpxokkSSrFOJEkSaUYJ5IkqRTjRJIklWKc\n",
+       "SJKkUowTSZJUinEiSZJKMU4kSVIpxokkSSrFOJEkSaUYJ5IkqRTjRJIklWKcSJKkUowTSZJUinEi\n",
+       "SZJKMU4kSVIpxokkSSrFOJEkSaUYJ5IkqRTjRJIklWKcSJKkUowTSZJUinEiSZJKMU4kSVIpxokk\n",
+       "SSrFOJEkSaUYJ5IkqRTjRJIklWKcSJKkUowTSZJUinEiSZJKWTWTO0VEH3AHsCMzb+pcdwDY23W3\n",
+       "GzLz0xFxKnA7sAY4DFySmbmwy5YkSW01bZxExMuAm4FXAd/pXBfAwcxcP8FDtgAbM3NrRJwD3AWc\n",
+       "tnBLliRJbTaTIyfvBG4DdgF9neteA4xExFeBFwKfBa4HTgAiM7cCZOYXI+KWiFifmQ8t+OolSVLr\n",
+       "TBsnmXkFQES8DhjtXL0S+BJwNXAM8AXgMeAbwCPjnmIvMAQYJ5IkaVozOuekSx9AZn6i67pDEbER\n",
+       "uBJ4YJLHjUz3xIODA7NcChyzun/Wj1lqq1f3z2nW6to4U7c2z9fm2cD5ep3zLU+zjZNRgIh4M/Dt\n",
+       "zNzRuX4FcATYDRw/7jFDPPPE2QkdOPD4LJcCTwwfmfVjltrw8JE5zVrZ4OBA62bq1ub52jwbOF+v\n",
+       "c77eNd/omu2PEo+dc7IO+HBErIiI1cC7gDszcx+wMyI2AETE2cBIV8RIkiRNabZxMnbOyYeAXwI7\n",
+       "gO3Af2XmbZ3bLgTeERE7gOuACxZioZIkaXmY8ds6mfmWrj8PA5dOcr+HgTPnvzRJkrQc+QmxkiSp\n",
+       "FONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRS\n",
+       "jBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkox\n",
+       "TiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4\n",
+       "kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONE\n",
+       "kiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUimrZnKniOgD7gB2ZOZNEbES2Aic1XmOGzNzc+e+pwK3\n",
+       "A2uAw8AlmZmLsXhJktQ+0x45iYiXAV8BLgBGO1dfBqwF1gFnAO+JiDM6t20Bbs7MdcC1wF0LvWhJ\n",
+       "ktReMzly8k7gNmBX13V/CmzKzKeBRyNiK3BxRDwCRGZuBcjML0bELRGxPjMfWujF95yRpzj08/3s\n",
+       "3PnDpV7JrJx88ovp7+9f6mVIkpaJaeMkM68AiIjXdV19ErCn6/Je4OWd6x8Z9xR7gSHAOHnsZ9x9\n",
+       "qI+7/+GBpV7JzB3az9eufgNr15661CuRJC0TMzrnZALj3w7qA0YmuH7MyBy/Tvsc9yJ4wdBSr0KS\n",
+       "pLLmGie7gRO7Lg/RHEnZDRw/7r5DNEdPpjQ4ODDrRRyz2rcang1r1hw77f7MZf96SZvna/Ns4Hy9\n",
+       "zvmWp9nGSV/n3/cCl0bENmAA2ABclpn7ImJnRGzIzDsj4mxgJDN3TPfEBw48PsulwBPDR2b9GM3e\n",
+       "wYOHp9yfwcGBOe1fr2jzfG2eDZyv1zlf75pvdM02TsZ+WucWmp/W2Q7005wce3/ntguBWyPiGmCY\n",
+       "5qd8JEmSZmTGcZKZb+n68whw1ST3exg4c/5LkyRJy5GfECtJkkoxTiRJUinGiSRJKsU4kSRJpRgn\n",
+       "kiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxI\n",
+       "kqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJ\n",
+       "kkoxTiRJUinGiSRJKsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJ\n",
+       "KsU4kSRJpRgnkiSpFONEkiSVYpxIkqRSjBNJklSKcSJJkkoxTiRJUinGiSRJKsU4kSRJpRgnkiSp\n",
+       "FONEkiSVYpxIkqRSVs3nwRFxE/BG4GDnqh8AFwEfB87qPP+Nmbl5Pl9HkiQtH/OKE+DVwIbM/PrY\n",
+       "FRHxTmAtsA54HvC1iPhWZn5znl9LkiQtA3OOk4g4GlgPXB0Ra4GHgfcC5wGbM/Np4NGI2ApcDBgn\n",
+       "kiRpWvM55+QE4CvABzLzFcDXgXuBU4A9XffbB5w0j68jSZKWkTkfOcnMnwDndl2+MSI+CBw9wd1H\n",
+       "5vp1JEnS8jKft3VOB16Rmf/cudzXuek+4MSuuw7xzCMpExocHJj1Go5Z3T/rx2j21qw5dtr9mcv+\n",
+       "9ZI2z9fm2cD5ep3zLU/zOSF2FPi7iLi/cxTlcmA78Hng0ojYBgwAG4DLpnuyAwcen/UCnhg+MuvH\n",
+       "aPYOHjw85f4MDg7Maf96RZvna/Ns4Hy9zvl613yjaz5v63w3Iq4AtkXESpqjI28Cfkrz0zrbgX5g\n",
+       "U2beP69VSpKkZWNeP0qcmVuALRPcdNV8nleSJC1ffkKsJEkqxTiRJEmlGCeSJKkU40SSJJVinEiS\n",
+       "pFKME0mSVIpxIkmSSjFOJElSKcaJJEkqxTiRJEmlGCeSJKkU40SSJJVinEiSpFKME0mSVIpxIkmS\n",
+       "SjFOJElSKcaJJEkqxTiRJEmlGCeSJKkU40SSJJVinEiSpFKME0mSVIpxIkmSSjFOJElSKcaJJEkq\n",
+       "xTiRJEmlGCeSJKkU40SSJJVinEiSpFKME0mSVIpxIkmSSjFOJElSKcaJJEkqxTiRJEmlGCeSJKkU\n",
+       "40SSJJVinEiSpFKME0mSVIpxIkmSSjFOJElSKcaJJEkqxTiRJEmlGCeSJKkU40SSJJVinEiSpFKM\n",
+       "E0mSVIpxIkmSSlm1WE8cEX8C/DVwNPAd4K2Z+fhifT1JkmbryJEj7Nmza0m+9i9/eSwHDx6e02NP\n",
+       "PvnF9Pf3L/CK6liUOImIQeB24DWZuTMiPgp8FHjXYnw9SZLmYs+eXbz6Y9vguBct9VJm7tB+vnb1\n",
+       "G1i79tSlXsmiWawjJ2cBD2Tmzs7lW4DtGCeSpGqOexG8YGipV6Eui3XOycnA3q7L+4DnRcSxi/T1\n",
+       "JElSSyzWkZO+Sa4fWcgvctTIk7zkF99ZyKdcFCtWreDpXz/NU4d+zr4Vz1/q5czOof3s3j31+7Hz\n",
+       "ed+0F7R5vjbPBs7X656N+Xbv3gWH9i/q11hwvbbeOegbHR1d8CeNiIuACzLzvM7lFwPfyswXLvgX\n",
+       "kyRJrbJYb+t8GfjdiHhp5/I7gHsW6WtJkqQWWZQjJwAR8Xrgb4B+4GHgksx8dFG+mCRJao1FixNJ\n",
+       "kqS58BNiJUlSKcaJJEkqxTiRJEmlLNrv1ukWEX3AHcCOzLwpIlYCG2k+SXYVcGNmbu7c91Saj75f\n",
+       "AxymOZE2n411ztX4+TrXHeCZH0R3Q2Z+utfmi4iLgfcDo8ATwJXAQ8DHacH+TTRfZj7Yov17N81P\n",
+       "y40CO4G3Awdpyd+/iebLzANt2T+AiDgP+MfMPK5tr53wzPk6l1uxdxFxE/BGmr9vAD8ALqI9r52/\n",
+       "MV9mvmmh9m/R4yQiXgbcDLyK5hcAAlwGrAXWAc8DvhYR38rMbwJbgI2ZuTUizgHuAk5b7HXO1UTz\n",
+       "RUQABzNz/QQP6Zn5OnPcAKzPzP2dn8C6m+b3JL2UHt+/yeaLiD+iHfv3SuB9wMsz8/GI+BhwHc1/\n",
+       "p23Yvwnni4iP04L9g//7hnUj///Blq157YTfnK8tr50drwY2ZObXx66IiHfSnv2baL4F279F/2md\n",
+       "iPh74OvA62iOLGyMiC8DmzLzrs59rqWpqRuA748VdOe2HwPnZ+ZDi7rQORo333c7R4beAlwN/A/w\n",
+       "QuCzwPXACfTQfJ0Pz/udzPy3zuXfAvYA/wXc3Ov7N8V8VwDvocf3DyAiVmbmSEQ8h+bo3o+AM4DN\n",
+       "vb5/MOF8O2k+uuAv6fH9i4hjgK/SrP1TmTnQstfOieZry2vn0cCjwL/SxMjDwHuBT9CCv3uTzHcV\n",
+       "zffBBdm/RT/nJDOvyMwt464+ieabwJi9netOAh4Zd9+9QNnfyDRuvrHSWwl8CTgb+P3Ov6+g+Z1D\n",
+       "PTNfZu7q+sbdR3M4+fM0/6H1/P5NMt+9wNO0YP8AOt+4z6PZr9fSfAM/mRbsH0w43ydpjgi3Yf82\n",
+       "A5v4/yPO0KLXTiaerxWvnTSvkV8BPpCZr6D5H9h7gVNox/5NNt+C7d+zcs7JBMZHUR/N792ZLJYW\n",
+       "9HfyLKI+gMz8RNd1hyJiI825Gg9M8rjS80XEc2le9IeA1/Obc/T0/o2b75zMfKzr5p7fv8y8B7gn\n",
+       "It5G88Lx1Li79PT+jZvv3zNzbdfNPbl/ncP/T2XmJyPiJV03teK1c7L52vLamZk/Ac7tunxjRHwQ\n",
+       "OHrcXXty/yaZ76+AL3ft4bz2b6l+Wmc3cGLX5SGamtwNHD/uvkM88+SaykYBIuLNEXF61/UrgCP0\n",
+       "4HwRcQrw3zTf0M7MzEO0aP8mmO+xtuxfRKyNiNd2XXUHzf+57aUF+zfJfC+OiEtasH9/AZwREQ8B\n",
+       "XwBWd/7cir1jkvlasndExOkR8eauy2PnDN1HC/Zvkvn6gN9bqP17tuNkbIPuBS6NiJUR8XxgA3BP\n",
+       "Zu4DdkbEBoCIOBsYycwdz/I652psvnXAhyNiRUSsBt4F3Nlr80XEGpq/TJ/NzD/PzCc7N7Vi/6aY\n",
+       "rxX7R/Mi+OmIGPuFmxcBO4DP0YL9Y/L5foce37/MfFVmnt45sfCPgeHOn1uxd1PM1/N71zEK/F3X\n",
+       "UaHLge00b4v3/P4x+XynsUD792y/rTN2TsYtNCfRbKf53TubMvP+zm0XArdGxDXAMHDBs7zG+Rib\n",
+       "70M0P8GzAzgK+Exm3ta5rZfmu5zmvdDzI+L8znWjwDm0Y/8mm+9c4CP0+P5l5v0RcT3wHxHxa2Af\n",
+       "cB7N/630/P5NMd/PaMffvzF9tPu1s3u+Vrx2ZuZ3I+IKYFs0P/69B3gT8FNasH9TzPcLFmj//N06\n",
+       "kiSpFD8hVpIklWKcSJKkUowTSZJUinEiSZJKMU4kSVIpxokkSSrFOJEkSaUYJ5IkqZT/BZhcMMRQ\n",
+       "4q0WAAAAAElFTkSuQmCC\n"
+      ],
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x115d73210>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['dias_siembra_cosecha'] = (df['fenologia_cosecha_fecha'] - df['fenologia_siembra_fecha']).apply(\n",
+    "    lambda dt: dt / np.timedelta64(24, 'h'))\n",
+    "df['dias_siembra_cosecha'].hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "media 150-250        38\n",
+       "media : 250 a 350    25\n",
+       "baja : - 250         18\n",
+       "100-154               1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clima = pd.read_csv('datos/clima_datos_unidos.csv', index_col='Date')\n",
-    "clima.head(3)"
+    "values = []\n",
+    "for v in df['factor_rend_densidad_pl_m2'].values:\n",
+    "    if isinstance(v, str):\n",
+    "        if not v.isalnum():\n",
+    "            values.append(v)\n",
+    "\n",
+    "pd.Series(values).value_counts()"
    ]
   },
   {
