--- a/1b_limpiar_explorar_datos_clima.ipynb
+++ b/1b_limpiar_explorar_datos_clima.ipynb
@@ -2,7 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "import os\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -96,14 +113,12 @@
        "2006-01-05  15.8     0    50  28.5    13"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import copy, os\n",
-    "\n",
     "files = [f for f in os.listdir('datos') if f.startswith('MERCEDES')]\n",
     "series = {}\n",
     "for f in files:\n",
@@ -121,7 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Exploracion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -137,16 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -954,7 +971,7 @@
        "cCEQCAQCgYApQrgQCAQCgUDAlP8PBKqR0n4DwKUAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x118df3810>"
+       "<matplotlib.figure.Figure at 0x1136fe310>"
       ]
      },
      "metadata": {},
@@ -1820,7 +1837,7 @@
        "RoxIERMXMWLEiBEjRoxI8f8BfHj8MgYI+IEAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x118e2b9d0>"
+       "<matplotlib.figure.Figure at 0x1136fe050>"
       ]
      },
      "metadata": {},
@@ -2554,7 +2571,7 @@
        "CCGBQuOCEEIIIYHy/wH5Qpa1D2q2SwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x119974d10>"
+       "<matplotlib.figure.Figure at 0x116364090>"
       ]
      },
      "metadata": {},
@@ -3274,7 +3291,7 @@
        "OC4YvMcAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x118db5ad0>"
+       "<matplotlib.figure.Figure at 0x1167f8890>"
       ]
      },
      "metadata": {},
@@ -3985,7 +4002,7 @@
        "gg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1155239d0>"
+       "<matplotlib.figure.Figure at 0x1107909d0>"
       ]
      },
      "metadata": {},
@@ -4004,7 +4021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -4012,10 +4029,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x11ba3d250>"
+       "<matplotlib.text.Text at 0x1170a0c10>"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4946,7 +4963,7 @@
        "mb9fAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11b814b10>"
+       "<matplotlib.figure.Figure at 0x117205690>"
       ]
      },
      "metadata": {},
