--- a/4_buscar_temperaturas_criticas.ipynb
+++ b/4_buscar_temperaturas_criticas.ipynb
@@ -8,7 +8,11 @@
    },
    "outputs": [],
    "source": [
-    "from scipy.stats.stats import pearsonr"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats.stats import pearsonr\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -129,7 +133,6 @@
     "fecha_cols = []\n",
     "for c in df.columns:\n",
     "    if 'fecha' in c:\n",
-    "#         print c\n",
     "        fecha_cols.append(c)\n",
     "        df[c] = pd.to_datetime(df[c]).astype('datetime64[ns]')\n",
     "\n",
