--- a/2_crear_figuras_sumarias.ipynb
+++ b/2_crear_figuras_sumarias.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {
     "collapsed": true
@@ -137,6 +153,7 @@
     "try:\n",
     "    os.mkdir('figuras/explorar/')\n",
     "except OSError:\n",
+    "    # Ya existe\n",
     "    pass\n",
     "\n",
     "def figura_hist(s, fig, ax, figname):\n",
