--- a/3_explorar.ipynb
+++ b/3_explorar.ipynb
@@ -2,18 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from scipy.stats import pearsonr"
+    "import os\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import pearsonr\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +145,7 @@
        "      <td>2008-03-03 00:00:00</td>\n",
        "      <td>2008-03-22 00:00:00</td>\n",
        "      <td>136</td>\n",
-       "      <td>0.210</td>\n",
+       "      <td>21.0</td>\n",
        "      <td>7877.250000</td>\n",
        "      <td>1.0521</td>\n",
        "      <td>8287.654725</td>\n",
@@ -176,7 +182,7 @@
        "      <td>2008-03-03 00:00:00</td>\n",
        "      <td>2008-03-17 00:00:00</td>\n",
        "      <td>131</td>\n",
-       "      <td>0.225</td>\n",
+       "      <td>22.5</td>\n",
        "      <td>8597.191489</td>\n",
        "      <td>1.0650</td>\n",
        "      <td>9156.008936</td>\n",
@@ -213,7 +219,7 @@
        "      <td>2008-03-03 00:00:00</td>\n",
        "      <td>2008-03-17 00:00:00</td>\n",
        "      <td>131</td>\n",
-       "      <td>0.180</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>8503.074627</td>\n",
        "      <td>0.9230</td>\n",
        "      <td>7848.337881</td>\n",
@@ -388,9 +394,9 @@
        "\n",
        "                                              factor_rend_pcthcosecha  \\\n",
        "id                                                                      \n",
-       "0708irundymirungaherrerito 27877,25                             0.210   \n",
-       "0708irundymirungaherrerito 38597,1914893617                     0.225   \n",
-       "0708irundymirungaherrerito 48503,07462686567                    0.180   \n",
+       "0708irundymirungaherrerito 27877,25                              21.0   \n",
+       "0708irundymirungaherrerito 38597,1914893617                      22.5   \n",
+       "0708irundymirungaherrerito 48503,07462686567                     18.0   \n",
        "\n",
        "                                              rendimiento_seco_kg_ha  \\\n",
        "id                                                                     \n",
@@ -417,7 +423,7 @@
        "0708irundymirungaherrerito 48503,07462686567            33.5  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -469,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -488,7 +494,7 @@
        "CIkuQEh0AUKiCxD6AA1BHo/cDOG3AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11420d150>"
+       "<matplotlib.figure.Figure at 0x1041d7ad0>"
       ]
      },
      "metadata": {},
@@ -503,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -528,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -536,10 +542,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x1140424d0>"
+       "<matplotlib.text.Text at 0x1072cf210>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -773,7 +779,7 @@
        "vmLxIkmS+orFiyRJ6isWL5Ikqa/8fwv8AaiTw746AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d545150>"
+       "<matplotlib.figure.Figure at 0x1072a8790>"
       ]
      },
      "metadata": {},
@@ -790,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1085,7 +1091,7 @@
        "KSESERGRhvcXR1f0Tg7HWYEAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x114037d10>"
+       "<matplotlib.figure.Figure at 0x106e62590>"
       ]
      },
      "metadata": {},
@@ -1099,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1107,10 +1113,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x114087610>"
+       "<seaborn.axisgrid.JointGrid at 0x107601b50>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1539,7 +1545,7 @@
        "knQEabCSJEmSjiANVpIkSdIRpMFKkiRJOoL/BzFAebaRrq8WAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x114087110>"
+       "<matplotlib.figure.Figure at 0x107601990>"
       ]
      },
      "metadata": {},
@@ -1552,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1567,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -2915,7 +2921,7 @@
        "sBARERERkaopsBARERERkaopsBARERERkar9f2bATGZ1oUVdAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1148f61d0>"
+       "<matplotlib.figure.Figure at 0x1077b3710>"
       ]
      },
      "metadata": {},
@@ -2942,7 +2948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -3020,21 +3026,6 @@
     "        print \"** ERROR **\"\n",
     "    if i > 0:\n",
     "        plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sns.jointplot(f[var], f[outvar])\n",
-    "        fig = plt.gcf()\n",
-    "        fig.subplots_adjust(left=0.2)\n",
-    "        add_fit(fig, f, var, outvar, range(1,3))\n",
-    "        fig.savefig(os.path.join(FOLDER, '%s.png' % var))"
    ]
   }
  ],
